mikec/tests/PASS/semantic/105.mc
void main(){
	{
		char a = 'a';
	}
	a = 'b';
}