mikec/tests/FAIL/semantic/test-type1.mc
void main(){
  char a = 'a';
	return;
}
